pdp logo z-index bugfix

--- a/src/modules/pdp-hero-secondary/section-pdp-hero-secondary.css
+++ b/src/modules/pdp-hero-secondary/section-pdp-hero-secondary.css
@@ -388,7 +388,7 @@ input[type="checkbox"]:checked+.pdp-hero__extra-checkbox svg {
     transform: translate(-50%, -50%);
     max-height: 40px;
     max-width: 200px;
-    z-index: 10;
+    z-index: 2;
     margin: 0;
     background-color: #000;
     border-radius: 20px;
